# fastapi-redis-solution

./: README.md  docker-compose.yaml  pyproject.toml
app/api/: dependencies.py  routers.py  schemas.py
app/redisdb/: config.py
